--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=CareerPathX
+application.vendor=Hp
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/CareerPathX.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/CareerPathX
+endorsed.classpath=
 excludes=
 file.reference.activation-jaf1.1.1.jar=C:\\Users\\Hp\\OneDrive\\Desktop\\jar_files\\activation-jaf1.1.1.jar
 file.reference.AnimatonClass.jar=C:\\Users\\Hp\\OneDrive\\Desktop\\jar_files\\AnimatonClass.jar
@@ -162,7 +164,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=CareerPathX
-main.class=careerpathx.CareerPathX
+main.class=First.WelcomePage
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
